--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+
+#examples 
+examples/wordpress/database/
+examples/wordpress/src/
+examples/wordpress/docker-compose.yaml
+examples/wordpress/haproxy.cfg
