chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ examples/wordpress/database/
 examples/wordpress/src/
 examples/wordpress/docker-compose.yaml
 examples/wordpress/haproxy.cfg
+
+examples/mongo_replica/docker-compose.yaml
