--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ examples/wordpress/docker-compose.yaml
 examples/wordpress/haproxy.cfg
 
 examples/mongo_replica/docker-compose.yaml
-
+examples/supabase/docker-compose.yaml
 examples/structs/docker-compose.yml
+docker-compose.yaml
+volumes/
 
 # IDE
 .vscode/
